--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "health_by_kb",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "8.12.0"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
@@ -9,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "http-proxy-middleware": "^0.20.0",
     "massive": "^6.1.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
@@ -33,22 +38,22 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ],
-    "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-    "main": "server/index.js",
-    "devDependencies": {},
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "proxy": "http://localhost:3500",
-    "nodemonConfig": {
-      "ext": "js,sql",
-      "ignore": [
-        "src/*"
-      ]
-    }
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server/index.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "proxy": "http://localhost:3500",
+  "nodemonConfig": {
+    "ext": "js,sql",
+    "ignore": [
+      "src/*"
+    ]
+  }
 }
